Fix: adjust blog styles and align with design spec

--- a/assets/css/blog/_list.sass
+++ b/assets/css/blog/_list.sass
@@ -1,13 +1,17 @@
 .hero.is-blog-list
   background: #FBFBFB
   position: relative
-  min-height: 560px
   +widescreen
     min-height: 670px
 
   +tablet
+    min-height: 560px
     &.has-fullwidth-background
       min-height: 670px
+
+  +mobile
+    .hero-body
+      padding-bottom: 0  // remove padding on bottom of hero image in mobile.
 
   .hero-background
     +absolute-fill
@@ -42,6 +46,8 @@
     .title
       +clamp-lines(3)
       line-height: 1.3 // baloo font issue in safari, line-height must be at least 1.3 em
+      &:hover
+        color: #463ff4
 
     .summary
       font-size: px-to-rem(16)
@@ -49,16 +55,14 @@
       color: #505F71
       +clamp-lines(3)
 
-    a
-      color: #505F71
-      &:hover
-        color: #333
-        text-decoration: underline
-
   .blog-hero-image
     flex: 1
 
     .image
+      +mobile
+        // full width hero image on mobile.
+        margin-left: -1.5rem
+        margin-right: -1.5rem
       +tablet
         min-width: 500px
 
@@ -128,10 +132,10 @@
         display: flex
         align-items: center
         font-size: px-to-rem(14)
-        line-height: 24px
         color: $link-hover
         fill: $link-hover
         span
+          line-height: 22px
           font-weight: 500
         .icon
           margin-left: -0.25rem
