--- a/assets/css/blog/_post.sass
+++ b/assets/css/blog/_post.sass
@@ -2,6 +2,10 @@
   background: #6E7EC1
   color: #ffffff
 
+  +mobile
+    .hero-body
+      padding-bottom: 64px
+
   .blog-hero-copy
     +desktop
       width: 45%
@@ -9,7 +13,7 @@
     .after-copy
       display: flex
       align-items: flex-end
-      +tablet-only
+      @media screen and (min-width: $tablet) and (max-width: $navbar-breakpoint - 1px)
         min-height: 10rem
 
   .featured-post
@@ -32,13 +36,16 @@
       font-weight: 500
     .author
       margin-right: 2rem
-
     margin-bottom: 64px
     +mobile
       margin-top: 40px
       margin-bottom: 0
-    +desktop
+    +from($navbar-breakpoint)
       margin-bottom: 40px
+
+  .featured-post,
+  .post-metadata
+    color: rgba(255,255,255,0.8)
 
   .image
     display: none
@@ -51,7 +58,7 @@
       height: 100%
       object-fit: cover
 
-    +desktop
+    +from($navbar-breakpoint)
       display: block
       margin-right: -80px
 
@@ -59,11 +66,13 @@
       +absolute-fill
 
 .section.is-blog-post
-  padding-top: 120px
+  padding-top: 160px
   padding-bottom: 120px
 
   > .container
     max-width: px-to-rem(694)
+    +until($navbar-breakpoint)
+      max-width: px-to-rem(400)
 
   .heading-image
     background: #FBFBFB
@@ -73,7 +82,6 @@
     left: 50%
     margin-left: calc(-50vw)
     margin-bottom: 80px
-
 
     +touch
       padding-left: 1.5rem
@@ -127,11 +135,29 @@
     > p:not(:last-child)
       margin-bottom: 40px
     > p:first-child
-      margin-top: -120px - 40px
+      margin-top: -160px - 40px
       margin-bottom: 120px
+      line-height: 0
+
+      // BEGIN: dirty way to keep first image align with title width.
+      @media screen and (min-width: 944px)
+        margin-left: -192px
+        margin-right: -192px
+      @media screen and (min-width: 784px) and (max-width: 943px)
+        margin-left: -112px
+        margin-right: -112px
+      @media screen and (min-width: $tablet) and (max-width: 784px)
+        margin-left: calc(80px - (100vw - 400px) / 2)
+        margin-right: calc(80px - (100vw - 400px) / 2)
+      @media screen and (min-width: 448px) and (max-width: $tablet)
+        margin-left: calc(24px - (100vw - 400px) / 2)
+        margin-right: calc(24px - (100vw - 400px) / 2)
+      // END: keep first image align with title width.
+
       img
+        width: 100%
         box-shadow: 0px 40px 60px rgba(0, 0, 0, 0.2);
-      +desktop
+      +from($navbar-breakpoint)
         display: none
     > h1
       margin-top: px-to-rem(80)
