--- a/assets/css/blog/_subscribe.sass
+++ b/assets/css/blog/_subscribe.sass
@@ -51,6 +51,11 @@
           width: 96px
         +widescreen
           width: 180px
+        .button
+          &:hover,
+          &:active,
+          &:focus
+            z-index: 0
 
     input
       height: 48px
